Move things around to show my point better